--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
+    "redux-localstorage": "^0.4.1",
     "redux-logger": "^2.8.1",
     "redux-saga": "^0.14.3",
     "reselect": "^2.5.4",
