--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "server:dev": "NODE_ENV=development webpack-dev-server --hot"
+    "server:dev": "NODE_ENV=development webpack-dev-server --hot",
+    "build": "NODE_ENV=production webpack --display-chunks"
   },
   "repository": {
     "type": "git",
