--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "minesweeper",
   "version": "0.0.1",
-  "description": "boilerplate",
+  "description": "minesweeper",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/archr/koa-flux-boilerplate.git"
+    "url": "git+https://github.com/archr/minesweeper.git"
   },
   "author": "Antonio Sandoval",
   "license": "MIT",
